--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -112,5 +112,13 @@ under the License.
         <% end %>
       </div>
     </div>
+
+    <!-- Zoho Sales IQ chat -->
+    <script type="text/javascript">
+    var $zoho=$zoho || {};$zoho.salesiq = $zoho.salesiq ||
+    {widgetcode:"85c29199536e15afee0f47667cfa8b892eafebb16a64b7ae0865c5843b3919f7948ed5afeb7e0ca1b1f47f3dc167a496", values:{},ready:function(){}};
+    var d=document;s=d.createElement("script");s.type="text/javascript";s.id="zsiqscript";s.defer=true;
+    s.src="https://salesiq.zoho.com/widget";t=d.getElementsByTagName("script")[0];t.parentNode.insertBefore(s,t);d.write("<div id='zsiqwidget'></div>");
+    </script>
   </body>
 </html>
