--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -51,7 +51,7 @@ under the License.
       </span>
     </a>
     <div class="toc-wrapper">
-      <%= image_tag "logo.png", class: 'logo' %>
+      <%= image_tag "https://static.hotelsforhope.com/portals/child-portals/cug/52342/images/logo-blue.png", class: 'logo', style: 'margin: 15px auto 0;' %>
       <% if language_tabs.any? %>
         <div class="lang-selector">
           <% language_tabs.each do |lang| %>
