--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -50,7 +50,7 @@ under the License.
         <%= image_tag('navbar.png') %>
       </span>
     </a>
-    <div class="toc-wrapper">
+    <div class="toc-wrapper" style="background-color: #243159;">
       <%= image_tag "https://static.hotelsforhope.com/portals/child-portals/cug/52342/images/logo-blue.png", class: 'logo', style: 'margin: 15px auto 0;' %>
       <% if language_tabs.any? %>
         <div class="lang-selector">
@@ -65,7 +65,7 @@ under the License.
       <% end %>
       <% if current_page.data.search %>
         <div class="search">
-          <input type="text" class="search" id="input-search" placeholder="Search">
+          <input type="text" class="search" id="input-search" placeholder="Search" style="background-color: #243159; color: #fff;">
         </div>
         <ul class="search-results"></ul>
       <% end %>
@@ -95,7 +95,7 @@ under the License.
     </div>
     <div class="page-wrapper">
       <div class="dark-box"></div>
-      <div class="content">
+      <div class="content" style="background-color: #243159;">
         <%= page_content %>
       </div>
       <div class="dark-box">
