--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -95,10 +95,10 @@ under the License.
     </div>
     <div class="page-wrapper">
       <div class="dark-box"></div>
-      <div class="content" style="background-color: #243159;">
+      <div class="content">
         <%= page_content %>
       </div>
-      <div class="dark-box">
+      <div class="dark-box" style="background-color: #243159;">
         <% if language_tabs.any? %>
           <div class="lang-selector">
             <% language_tabs.each do |lang| %>
